RESOLVED FIXED 49217
REGRESSION: Two layout tests failing after positionForPoint changes.
https://bugs.webkit.org/show_bug.cgi?id=49217
Summary REGRESSION: Two layout tests failing after positionForPoint changes.
Dave Hyatt
Reported 2010-11-08 15:54:31 PST
Two layout tests failing after positionForPoint changes.
Attachments
Patch (4.43 KB, patch)
2010-11-08 15:57 PST, Dave Hyatt
simon.fraser: review+
Dave Hyatt
Comment 1 2010-11-08 15:57:03 PST
Dave Hyatt
Comment 2 2010-11-08 16:00:06 PST
Fixed in r71582.
WebKit Review Bot
Comment 3 2010-11-08 16:20:45 PST
http://trac.webkit.org/changeset/71582 might have broken Qt Linux Release
Csaba Osztrogonác
Comment 4 2010-11-09 00:43:20 PST
(In reply to comment #3) > http://trac.webkit.org/changeset/71582 might have broken Qt Linux Release It fixed the two broken tests: editing/selection/move-by-line-003.html and fast/dom/Document/CaretRangeFromPoint/replace-element.html on all bot, but unfortunately it broke two another tests on Qt bot: - editing/deleting/delete-line-011.html - editing/pasteboard/paste-4039777-fix.html - link: http://build.webkit.org/results/Qt%20Linux%20Release/r71582%20%2823376%29/results.html
Csaba Osztrogonác
Comment 5 2010-11-09 02:14:06 PST
New bug filed for new regression: https://bugs.webkit.org/show_bug.cgi?id=49243
Eric Seidel (no email)
Comment 6 2010-12-14 01:43:57 PST
Looks like this was fixed?
Note You need to log in before you can comment on or make changes to this bug.