https://bugs.webkit.org/show_bug.cgi?id=49217

Reviewed by Simon Fraser.

Fix coordinate space mismatch in RenderReplaced and make sure RenderText retains its old behavior of
preferring later lines when there is overlap.

WebCore:

* rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::positionForPoint):
* rendering/RenderText.cpp:
(WebCore::RenderText::positionForPoint):

LayoutTests:

* fast/dom/Document/CaretRangeFromPoint/replace-element-expected.txt:
* fast/dom/Document/CaretRangeFromPoint/replace-element.html:



Canonical link: https://commits.webkit.org/62069@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71582 268f45cc-cd09-0410-ab3c-d52691b4dbfc